# pbr_project

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  chi2test_1.m  chi2test_10.m  chi2test_11.m  chi2test_12.m  chi2test_13.m  chi2test_14.m  chi2test_15.m  chi2test_2.m  chi2test_3.m  chi2test_4.m  chi2test_5.m  chi2test_6.m  chi2test_7.m  chi2test_8.m  chi2test_9.m  chitest.m  perlin.exr  render.bat
assets/config/: oldtreeconfigs
assets/env/: bluesky_left.exr  bluesky_right.exr  highcontrast_left.exr  highcontrast_right.exr  lowcontrast.exr  lowcontrast_left.exr  lowcontrast_right.exr
assets/grammar/: bgtree.l6  bgtree2.l6  demotree.l6  roots.l6
assets/normal/: water.exr  waterhigh.exr
assets/scene/: draft2.blend  draft2.blend1  finalscene.blend  finalscene.blend1  fromtop.blend  fromtop.blend1
assets/terrain/: fbm0.exr  fbmp.exr  lowres.exr
assets/texture/: trunk_normal.exr
assets/tree/: demotree.mtl
include/nori/: accel.h  area.h  bsdf.h  emitter.h  mesh.h  octree.h  scene.h  strutil.h  warp.h
references/: volumetest.py
references/disney_cloud/: cloud.xml
references/tree/: skeleton.pdn
renders/: tophg.exr
report/: .gitattributes  final_report.html
report/ibl/: onepixel_left.exr  onepixelbunny.exr  pointbunny.exr
report/media/: mediascene.blend  mediascene.blend1  mi_result.exr  mi_scene.xml  nori_scene.xml  phasetest.xml  rabbit_mitsuba.py
report/normal/: bump-test.xml  flat_hmap.exr
report/terrain/: terrain.xml
report/texture/: texture.xml
scenes/bump/: bump-test.exr  bump-test.xml
scenes/cloud/: bluesky.exr  bluesky.xml  cloud.exr  cloud.xml  debug.exr  debug.xml  object_in_media.exr  object_in_media.xml  top.exr  top.xml  tophg.exr  tophg.xml
scenes/cloud2/: cloud_and_fog.exr  cloud_and_fog.xml
scenes/demo/: texture.exr  texture.xml  tree.xml
scenes/directional/: bunny.exr  bunny.xml  bunny0.exr
scenes/final/: finalscene.xml  forcamera.xml  lowsamples.xml  temp.xml  test.xml
scenes/final2/: draft1.xml  draft1bis.xml  finalscene.exr  finalscene.xml  finalscene2.exr  finalscene2.xml  finalversion.xml  fromtop.xml
scenes/hpm/: cube.exr  cube.xml  v1s1.xml  v2s1.exr  v2s1.xml  v3s1.xml  v3s2.xml  v4s1.xml  v4s2.xml  v5s1.xml  v6s1.xml  v6s2.xml
scenes/ibl/: data.txt  glass.xml  greenroom.xml  mipmap.exr  plotter.py  sky-only.xml  yellow-env.exr  yellow-env.xml
scenes/old/: test.xml
scenes/pa1/: bunny.exr  bunny.xml  test.exr  test.xml
scenes/pa2/: ajax-normals.exr  ajax-normals.xml
scenes/pa3/: ajax-ao-32s.exr  ajax-ao-64s.exr  ajax-ao.exr  ajax-ao.xml  ajax-simple-ref.exr  ajax-simple.exr  ajax-simple.xml  bunny-ao.exr  bunny-ao.xml  bunny-simple.exr  bunny-simple.xml
scenes/ptextures/: flattener.py  scene.xml  smallterrain.xml
scenes/terrain/: binary.pgm  everest.pgm  fbm-heights.exr  fbm.exr  fbm.xml  leman.exr  lowres.exr  perlin-heights.exr  perlin.exr  perlin.xml  test-exr.exr  test.exr  test.pgm  test.xml
scenes/textures/: dinosaur.exr  dinosaur.xml  textured-rock.exr  textured-rock.xml
scenes/tree/: cylinders.exr  cylinders.xml  flat.exr  tree-flowers.xml  tree.exr  tree.xml  tree2d.exr  tree2d.xml  tree3d.xml
scenes/tree2/: bgtree.xml  mtexture.xml  nodebranch.xml  petalbranch.xml  prettybranch.xml  realtree.xml  simpletree.xml  testflowers.xml  testgrammar.l6  testref.xml  treegrammar.l6  treegrammar2.l6
scenes/trunk/: roots.xml  trunk.xml
scripts/: circle_visualizer.py  final_pos.txt  skygen.py
src/: accel.cpp  ambient.cpp  area.cpp  dielectric.cpp  main.cpp  mesh.cpp  normals.cpp  octree.cpp  octree_test.cpp  pointlight.cpp  scene.cpp  simple.cpp  strutil.cpp  warp.cpp  warptest.cpp  whitted.cpp
src/bsdf/: blendmap.cpp  dielectric.cpp  diffuse.cpp  luminosity.cpp  microfacet.cpp  mirror.cpp  mountainmap.cpp  multidiffusemap.cpp  texturemap.cpp  uniformmap.cpp  uniformmap.cpp~
src/collection/: accel.cpp  mipmap.cpp  octree.cpp
src/core/: adaptive.cpp  common.cpp  mesh.cpp  object.cpp  perspective.cpp  scene.cpp
src/emitter/: area.cpp  directional.cpp  emitter.cpp  environment.cpp
src/gui/: bitmap.cpp  block.cpp  gui.cpp
src/integrator/: ambient.cpp  direct.cpp  env_only.cpp  normals.cpp  path_mis.cpp  path_simple.cpp  pointlight.cpp  volum1.cpp  volum2.cpp  volum3.cpp  (+6 more)
test/: fbm_test.cpp  grass_alias.cpp  grass_test.cpp  manual_cloud.cpp  medium_test.cpp  merge_exr.cpp  mipmap_test.cpp  parseconfigtest.cpp  perlin_test.cpp  procedural_cloud.cpp  readvoxel.cpp  smallterraintest.cpp  split_exr.cpp
(+156 files in other folders)
